# django-dag

./: .gitignore  README  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
django_dag/: exceptions.py  models.py
django_dag/models/: __init__.py  order_control.py  query.py
django_dag/models/backends/: base.py  djangocte.py  query.py  standard.py
django_dag/templates/: tree.html
django_dag/templatetags/: dag_tags.py
docs/: conf.py  settings.py
src/django_dag/models/: __init__.py  order_control.py  query.py
src/django_dag/models/backends/: __init__.py  base.py  djangocte.py  standard.py
src/django_dag/templatetags/: dag_tags.py
tests/unit/settings/: base.py  djangocte.py
tests/unit/testapp/models/: basic.py  inherited.py  ordered.py  ordersort.py
tests/unit/testapp/tests/: test_basic.py  test_inherited.py  test_ordered.py  tree_test_output.py
