[bdist_wheel]
universal=1

[metadata]
name = django-dag
version = attr: django_dag.__version__

description=Directed Acyclic Graph implementation for Django 2+
long_description = file: README.md
long_description_content_type = text/markdown
maintainer =  Paul Gammans
maintainer_email = pgammans@gammascience.co.uk
license = BSD License
url = https://github.com/bva/django-dag
project_urls =
    Bug Tracker = https://github.com/bva/django-dag/issues
    Repository = https://github.com/bva/django-dag
    Documentation = https://github.com/bva/django-dag

classifiers =
        Development Status :: 4 - Beta
        Environment :: Web Environment
        Framework :: Django
        Intended Audience :: Developers
        License :: OSI Approved :: GNU Affero General Public License v3
        Operating System :: OS Independent
        Programming Language :: Python
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Framework :: Django
        Framework :: Django :: 2.2
        Framework :: Django :: 3.0
        Framework :: Django :: 3.1
        Framework :: Django :: 3.2
        Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    django-delayed-union
    deprecated
    Django>=2.2
setup_requires =
  setuptools_scm
  packaging

[options.packages.find]
where = src

[options.extras_require]
cte =
    django_cte @ git+https://github.com/bva-icx/django-cte.git@master#egg=django_cte
